--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "baileys",
-  "version": "6.0.9",
+  "version": "1.0.0",
   "description": "Baileys Fixed",
   "homepage": "https://github.com/amiruldev20/Baileys",
   "main": "lib/index.js",
@@ -38,7 +38,7 @@
     "@hapi/boom": "^9.1.3",
     "axios": "^1.3.3",
     "futoin-hkdf": "^1.5.1",
-    "libsignal": "git+https://github.com/amiruldev20/signal",
+    "libsignal": "github:amiruldev20/signal",
     "music-metadata": "^7.12.3",
     "node-cache": "^5.1.2",
     "pino": "^7.0.0",
@@ -76,7 +76,7 @@
     "WASignalGroup/*.js"
   ],
   "devDependencies": {
-    "@adiwajshing/eslint-config": "git+https://github.com/adiwajshing/eslint-config.git",
+    "@adiwajshing/eslint-config": "github:adiwajshing/eslint-config",
     "@adiwajshing/keyed-db": "^0.2.4",
     "@types/got": "^9.6.11",
     "@types/jest": "^27.5.1",
