--- a/package.json
+++ b/package.json
@@ -92,6 +92,6 @@
     "ts-jest": "^27.0.3",
     "ts-node": "^10.8.1",
     "typedoc": "^0.22.0",
-    "typescript": "^4.0.0"
+    "typescript": "*"
   }
 }
